# werss-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  openapi.json  werss.toml.example
.github/workflows/: release-linux.yml  release-macos.yml  release-windows.yml
docs/: api-reference.md  architecture.md  configuration.md  incremental-sync.md  index.md  installation.md  output-format.md  troubleshooting.md  usage.md
src/: auth.rs  client.rs  config.rs  convert.rs  main.rs  state.rs
