[package]
name = "werss-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive", "env"] }
html2md = "0.2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
dotenvy = "0.15"
anyhow = "1"
regex = "1"
toml = "0.8"
keyring = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
